apply plugin: 'com.android.application'

if (project.file('../ActivityDiarySigning.properties').exists()) {
    apply plugin: 'com.github.triplet.play'

    Properties props = new Properties()
    props.load(new FileInputStream(file('../ActivityDiarySigning.properties')))

    android {
        signingConfigs {
            gplayRelease {
                storeFile file("${System.properties['user.home']}${File.separator}/.android_keystore")
                storePassword props['keystore.password']
                keyAlias 'key0'
                keyPassword  props['key.password']
            }
            release {
                storeFile file("${System.properties['user.home']}${File.separator}/.android_keystore_default")
                storePassword props['keystore_default.password']
                keyAlias 'defaultRelease'
                keyPassword  props['key_default.password']
            }
        }
        playAccountConfigs {
            defaultAccountConfig {
                serviceAccountEmail = 'gplay-ramack@api-5226730847504381805-103625.iam.gserviceaccount.com'
                pk12File = file('../gplay-developer-9607db552238.p12')
            }
        }        
    }
    play {
        uploadImages = true
        untrackOld = true
        track = 'beta'
    }
}

android {
    compileSdkVersion 26
    buildToolsVersion '26.0.2'
    defaultConfig {
        applicationId "de.rampro.activitydiary"
        minSdkVersion 16
        targetSdkVersion 26
        versionCode 118
        versionName "1.1.8"
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
        setProperty("archivesBaseName", "ActivityDiary-" + defaultConfig.versionName)
        if (project.file('../ActivityDiarySigning.properties').exists()) {
            playAccountConfig = playAccountConfigs.defaultAccountConfig
        }
    }
    buildTypes {
        debug {
            applicationIdSuffix ".debug"
            versionNameSuffix "-debug"
        }
        release {
//            signingConfig signingConfigs.release
//            minifyEnabled false
//            shrinkResources true
//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
        gplayRelease {
//            minifyEnabled false
//            shrinkResources true
//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            if (project.file('../ActivityDiarySigning.properties').exists()) {
                signingConfig signingConfigs.gplayRelease
            }
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    testOptions {
        unitTests {
            includeAndroidResources = true
        }
    }
}

dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation "com.android.support:appcompat-v7:${supportLibVersion}"
    implementation "com.android.support:cardview-v7:${supportLibVersion}"
    implementation "com.android.support:recyclerview-v7:${supportLibVersion}"
    implementation "com.android.support:design:${supportLibVersion}"
    implementation "com.android.support:preference-v7:${supportLibVersion}"
    implementation "com.android.support:preference-v14:${supportLibVersion}"
    implementation "com.android.support:exifinterface:${supportLibVersion}"
    implementation 'com.pes.materialcolorpicker:library:1.2.2'
    implementation 'ch.acra:acra:4.9.2'
    implementation 'com.squareup.picasso:picasso:2.5.2'
    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
    // Don't forget to add attribution in strings.xml/libraries and README.md if you add something here

    androidTestImplementation 'junit:junit:4.12'
    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
        exclude group: 'com.android.support', module: 'support-annotations'
    })

    testImplementation 'junit:junit:4.12'
    testImplementation 'org.robolectric:robolectric:3.6.1'
}

